KTC-443 "No dashlets are displayed on Ie7 after upgrading from 3.5.2 to 3.5.2a" Fixed. The font-family "Bitstream Vera Sans" was causing an issue in IE7 so it has been removed.
Committed by: Megan Watson
Reviewed by: Kevin Fourie



git-svn-id: https://kt-dms.svn.sourceforge.net/svnroot/kt-dms/trunk@8322 c91229c3-7414-0410-bfa2-8a42b809f60b

--- a/resources/css/kt-framing.css
+++ b/resources/css/kt-framing.css
@@ -753,7 +753,7 @@ a.main_nav_item {
 
 #content h2
 {
-    font-family: "Lucida Grande", "Bitstream Vera Sans", Tahoma, sans-serif;
+    font-family: "Lucida Grande", Tahoma, sans-serif; /* "Bitstream Vera Sans" */
     padding-bottom: 0.25em;
     border-width: 0 0 0 0;
     border-style: solid;
@@ -2128,6 +2128,6 @@ body #content #add_dashlet
 
 .workflow_step2
 {
-	overflow:scroll; 
+	overflow:scroll;
 
 }
